# coalmine

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cookies.txt  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  test_gcp_creds.py
config/: README.md  alert_outputs.yaml  api_keys.yaml  auth.yaml  credentials.yaml  detections.yaml  environments.yaml  rbac_model.conf  rbac_policy.csv  resource_types.yaml
scripts/: README.md  add_last_checked_column.py  check_gcp_id.py  check_status.py  configure_log_exclusion.py  debug_creds.py  debug_cw_query.py  debug_gcp_logs.py  debug_gcp_sink_name.py  debug_log_res.py  debug_monitor_gcp.py  debug_s3_events.py  delete_resource.py  destroy_all.py  enable_gcp_audit_logs.py  integration_test.py  list_aws_logs.py  migrate.py  migrate_accounts.py  migrate_enum.py  migrate_environments.py  seed_env.py  test_sink_update.py  trigger_gcp_canary.py  update_gcp_sink.py  verify_alert.py
src/: api_keys_loader.py  celery_app.py  cli.py  config_loader.py  config_schemas.py  credential_sync.py  credentials.py  environment_sync.py  logging_config.py  logging_utils.py  main.py  manage_env.py  models.py  secret_field.py  show_creds.py  task_signals.py  tofu_manager.py
tests/: README.md  conftest.py  repro_webhook.py  test_logic.py  test_logic_manual.py  test_monitor_logic.py  test_multienv.py  test_params.py  utils.py
tofu_templates/: README.md
webui/: .env.example  .gitignore  README.md  STYLE_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
(+157 files in other folders)
